--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
+    "@sitaggart/eslint-config": "0.0.0",
     "@sitaggart/prettier-config": "0.0.0",
     "eslint": "^6.4.0",
     "husky": "^3.0.5",
