--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+      - name: "Install: yarn install"
+        uses: borales/actions-yarn@master
+        with:
+          args: install
       - name: "Publish: Trigger lerna publish"
         uses: borales/actions-yarn@master
         env:
