--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: "Install: yarn install"
+      - name: "Init: Install dependencies"
         uses: borales/actions-yarn@master
         with:
           args: install
