--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,8 @@ jobs:
         node-version: [12.x]
     steps:
       - uses: actions/checkout@master
+        with:
+          ref: master
       - name: "Init: Summon NodeJS"
         uses: actions/setup-node@v1
         with:
