chore: try setting git name and email in CI

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/checkout@master
       - name: Checkout master
         run: git checkout "${GITHUB_REF:11}"
+      - name: Set git email and name
+        run: git config user.email "me@simontaggart.com && git config user.name "GitHub Actions CI""
       - name: "Init: Summon NodeJS"
         uses: actions/setup-node@v1
         with:
