chore: try a bash script

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,8 +15,6 @@ jobs:
       - uses: actions/checkout@master
       - name: Checkout master
         run: git checkout "${GITHUB_REF:11}"
-      - name: Set git email and name
-        run: git config user.email "me@simontaggart.com" && git config user.name "SiTaggart"
       - name: "Init: Summon NodeJS"
         uses: actions/setup-node@v1
         with:
@@ -29,6 +27,7 @@ jobs:
         uses: borales/actions-yarn@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GH_USER_NAME: ${{ secrets.GH_USER_NAME }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         with:
-          args: release
+          args: ci:deploy
