chore: get the script name right

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "deploy:ci": "./deploy.sh",
+    "ci:deploy": "./deploy.sh",
     "lerna": "lerna",
     "release": "yarn lerna version -m 'chore(release): publish' --conventional-commits --yes --create-release github"
   },
