chore: add the github token back in the release job

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,5 +32,7 @@ jobs:
           args: install
       - name: "Publish: Trigger lerna publish"
         uses: borales/actions-yarn@master
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         with:
           args: release
