--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -29,5 +29,6 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^2.2.0",
     "@typescript-eslint/parser": "^2.2.0"
-  }
+  },
+  "gitHead": "61e949b9ad140a20623368c9c9cc190789a87772"
 }
