--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -38,5 +38,6 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
-  }
+  },
+  "gitHead": "61e949b9ad140a20623368c9c9cc190789a87772"
 }
