--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -29,15 +29,15 @@
     "prettier": "*"
   },
   "dependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-cypress": "^2.6.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "babel-eslint": "10.0.3",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-config-standard": "14.1.0",
+    "eslint-plugin-cypress": "2.6.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-node": "10.0.0",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-standard": "4.0.1"
   },
   "gitHead": "a6961a7c6edecb883f98352075cd0745054ab52d"
 }
