--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,8 @@
   "useWorkspaces": true,
   "command": {
     "publish": {
-      "npmClient": "npm"
+      "npmClient": "npm",
+      "verifyAccess": false
     }
   }
 }
