--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,5 @@
 {
   "packages": ["packages/*"],
   "version": "independent",
-  "npmClient": "npm",
-  "command": {
-    "publish": {
-      "npmClient": "npm",
-      "verifyAccess": false
-    }
-  }
+  "npmClient": "npm"
 }
