--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,11 @@
 {
   "packages": ["packages/*"],
   "version": "independent",
-  "npmClient": "npm"
+  "npmClient": "yarn",
+  "useWorkspaces": true,
+  "command": {
+    "publish": {
+      "npmClient": "npm"
+    }
+  }
 }
