--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -11,6 +11,9 @@
   "homepage": "https://github.com/SiTaggart/lint-config#readme",
   "license": "MIT",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SiTaggart/lint-config.git"
@@ -30,5 +33,5 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1"
   },
-  "gitHead": "0bc9c6de7933209668d6cf10a6cef722d1f12414"
+  "gitHead": "5ab9ad16ed50b7f5fa90a71c9efb4cbd95569a43"
 }
