--- a/packages/prettier-config/package.json
+++ b/packages/prettier-config/package.json
@@ -10,6 +10,9 @@
   "homepage": "https://github.com/SiTaggart/lint-config#readme",
   "license": "MIT",
   "main": "index.js",
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SiTaggart/lint-config.git"
@@ -23,5 +26,5 @@
   "peerDependencies": {
     "prettier": "*"
   },
-  "gitHead": "0bc9c6de7933209668d6cf10a6cef722d1f12414"
+  "gitHead": "5ab9ad16ed50b7f5fa90a71c9efb4cbd95569a43"
 }
