--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npm config set registry https://registry.npmjs.org/:_authToken=$NPM_TOKEN -q
       - name: "NPM login"
-        run: npm login
+        run: npm whoami
       - name: "Publish: Trigger lerna publish"
         uses: borales/actions-yarn@master
         env:
