--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -33,6 +33,7 @@
     "eslint-config-prettier": "6.3.0",
     "eslint-config-standard": "14.1.0",
     "eslint-plugin-cypress": "2.6.1",
+    "eslint-plugin-eslint-comments": "^3.1.2",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-node": "10.0.0",
     "eslint-plugin-prettier": "3.1.1",
