fix: add a scope

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,8 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-          npm-registry:
-            - registry: "https://registry.npmjs.org"
-              scope: "@sitaggart"
-              token: "${{secrets.NPM_TOKEN}}"
+          registry-url: "https://registry.npmjs.org"
+          scope: sitaggart
       - name: "Checkout master"
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
