--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -24,12 +24,28 @@
     "url": "https://github.com/SiTaggart/lint-config/issues"
   },
   "peerDependencies": {
-    "@sitaggart/eslint-config": "*"
+    "eslint": "*",
+    "prettier": "*"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "2.5.0",
     "@typescript-eslint/parser": "2.5.0",
-    "eslint-config-airbnb-typescript": "5.1.0"
+    "eslint-config-airbnb-typescript": "6.0.0",
+    "eslint-config-prettier": "6.5.0",
+    "eslint-config-standard": "14.1.0",
+    "eslint-config-standard-jsx": "8.1.0",
+    "eslint-plugin-cypress": "2.7.0",
+    "eslint-plugin-eslint-comments": "3.1.2",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jest": "22.20.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-node": "10.0.0",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "2.2.0",
+    "eslint-plugin-standard": "4.0.1",
+    "eslint-plugin-unicorn": "12.1.0"
   },
   "gitHead": "5ab9ad16ed50b7f5fa90a71c9efb4cbd95569a43",
   "devDependencies": {
