--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -30,9 +30,10 @@
   },
   "dependencies": {
     "babel-eslint": "10.0.3",
-    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-config-airbnb": "18.0.1",
     "eslint-config-prettier": "6.5.0",
     "eslint-config-standard": "14.1.0",
+    "eslint-config-standard-jsx": "8.1.0",
     "eslint-plugin-cypress": "2.7.0",
     "eslint-plugin-eslint-comments": "3.1.2",
     "eslint-plugin-import": "2.18.2",
@@ -42,6 +43,7 @@
     "eslint-plugin-prettier": "3.1.1",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "2.2.0",
     "eslint-plugin-standard": "4.0.1",
     "eslint-plugin-unicorn": "12.1.0"
   },
