--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "devDependencies": {
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
-    "@sitaggart/eslint-config": "0.1.3",
-    "@sitaggart/prettier-config": "0.1.2",
+    "@sitaggart/eslint-config": "^0.5.44",
+    "@sitaggart/prettier-config": "^0.2.0",
     "eslint": "6.8.0",
     "husky": "4.2.3",
     "lerna": "3.20.2",
