--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GH_USER_NAME: ${{ secrets.GH_USER_NAME }}
-        run: git remote rm origin && git remote add origin "https://$GH_USER_NAME:$GH_TOKEN@github.com/SiTaggart/lint-config.git" && git fetch && git config user.email octobot@github.com && git config user.name GitHub Actions && git checkout "${GITHUB_REF:11}"
+        run: git remote rm origin && git remote add origin "https://$GH_USER_NAME:$GH_TOKEN@github.com/SiTaggart/lint-config.git" && git fetch && git config user.email me@simontaggart.com && git config user.name SiTaggart && git checkout "${GITHUB_REF:11}"
       - name: Install deps
         run: yarn install
       - name: Bootstrap repo
