--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "devDependencies": {
     "@commitlint/cli": "12.0.0",
     "@commitlint/config-conventional": "12.0.0",
-    "@sitaggart/eslint-config": "0.5.209",
-    "@sitaggart/prettier-config": "0.2.75",
+    "@sitaggart/eslint-config": "latest",
+    "@sitaggart/prettier-config": "latest",
     "eslint": "7.20.0",
     "husky": "5.1.1",
     "lerna": "4.0.0",
