--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -29,7 +29,7 @@
     "prettier": "*"
   },
   "dependencies": {
-    "babel-eslint": "10.1.0",
+    "@babel/eslint-parser": "7.14.4",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "16.0.3",
@@ -44,7 +44,6 @@
     "eslint-plugin-promise": "4.3.1",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-standard": "5.0.0",
     "eslint-plugin-unicorn": "30.0.0"
   },
   "gitHead": "5ab9ad16ed50b7f5fa90a71c9efb4cbd95569a43"
