--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "private": true,
   "scripts": {
     "postinstall": "husky install",
-    "bootstrap": "lerna bootstrap",
     "lerna": "lerna",
-    "lint": "eslint ./**/*.js",
+    "lint": "eslint ./packages/**/*.js",
     "release": "yarn lerna publish -m 'chore(release): publish' --conventional-commits --yes --create-release github"
   },
   "workspaces": [
     "packages/**"
   ],
   "devDependencies": {
+    "@babel/core": "7.15.5",
+    "@babel/eslint-parser": "7.15.4",
+    "@babel/preset-env": "7.15.4",
     "@commitlint/cli": "13.1.0",
     "@commitlint/config-conventional": "13.1.0",
-    "@sitaggart/eslint-config": "latest",
-    "@sitaggart/prettier-config": "latest",
+    "@sitaggart/eslint-config": "workspace:*",
+    "@sitaggart/prettier-config": "workspace:*",
     "eslint": "7.32.0",
     "husky": "7.0.2",
     "lerna": "4.0.0",
