--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -29,6 +29,7 @@
     "prettier": "*"
   },
   "dependencies": {
+    "@babel/core": "7.15.5",
     "@babel/eslint-parser": "7.15.4",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
