chore: update mergify to handle merge queue

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,9 +1,3 @@
 {
-  "extends": [
-    "config:base",
-    ":automergeMinor",
-    ":pinVersions",
-    "group:allNonMajor",
-    "schedule:earlyMondays"
-  ]
+  "extends": ["config:base", ":pinVersions", "group:allNonMajor", "schedule:earlyMondays"]
 }
