--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,18 +1,18 @@
 pull_request_rules:
   - name: automatic merge for Dependabot pull requests
     conditions:
-      - author~=^dependabot(|-preview)\[bot\]$
+      - author=renovate[bot]
     actions:
-      merge:
-        method: squash
-        strict: smart
-        strict_method: rebase
+      queue:
+        method: rebase
+        rebase_fallback: squash
+        update_method: rebase
   - name: automatic merge for main when labelled ready to merge
     conditions:
       - base=main
       - label=ready-to-merge
     actions:
-      merge:
-        method: squash
-        strict: smart
-        strict_method: rebase
+      queue:
+        method: rebase
+        rebase_fallback: squash
+        update_method: rebase
