--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -4,6 +4,7 @@ pull_request_rules:
       - author=renovate[bot]
     actions:
       queue:
+        name: default
         method: rebase
         rebase_fallback: squash
         update_method: rebase
@@ -13,6 +14,7 @@ pull_request_rules:
       - label=ready-to-merge
     actions:
       queue:
+        name: default
         method: rebase
         rebase_fallback: squash
         update_method: rebase
