--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,3 +1,9 @@
+queue_rules:
+  - name: default
+    conditions:
+      - -draft # not a draft
+      - base=main
+
 pull_request_rules:
   - name: automatic merge for Dependabot pull requests
     conditions:
