--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,4 @@
 {
-  "extends": ["config:base", ":pinVersions", "group:allNonMajor", "schedule:earlyMondays"]
+  "extends": ["config:base", ":pinVersions", "group:allNonMajor", "schedule:earlyMondays"],
+  "lockFileMaintenance": { "enabled": true }
 }
