--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
@@ -34,3 +34,5 @@ jobs:
         run: yarn install
       - name: Lint the lint configs
         run: yarn lint
+      - name: Prettier
+        run: yarn prettier
