--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@commitlint/config-conventional": "17.6.7",
     "@sitaggart/eslint-config": "workspace:*",
     "@sitaggart/prettier-config": "workspace:*",
+    "dotenv": "16.3.1",
     "eslint": "8.46.0",
-    "husky": "^8.0.3",
+    "husky": "8.0.3",
     "lerna": "7.1.4",
     "precise-commits": "1.0.2",
     "prettier": "3.0.1"
