refactor: migrate to biome and remove deprecated eslint configurations
- Deleted ESLint and Prettier configuration files in favor of Biome.
- Updated package.json files to reflect changes in dependencies and configurations.
- Adjusted GitHub workflows to use Bun for dependency management and linting.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,38 +1,21 @@
-name: PR check
+name: CI
 
-on: [pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
 
 jobs:
   lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: oven-sh/setup-bun@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn config get cacheFolder)"
-      - uses: actions/cache@v3
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-      - name: restore lerna
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            */*/node_modules
-          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
-      - name: Install deps
-        run: yarn install
-      - name: Lint the lint configs
-        run: yarn lint
+          bun-version: latest
+      - name: Install dependencies
+        run: bun install
+      - name: Lint
+        run: bun run lint
       - name: Prettier
-        run: yarn prettier
+        run: bun run prettier
