refactor: migrate to biome and remove deprecated eslint configurations (#679)
* refactor: migrate to biome and remove deprecated eslint configurations

- Deleted ESLint and Prettier configuration files in favor of Biome.
- Updated package.json files to reflect changes in dependencies and configurations.
- Adjusted GitHub workflows to use Bun for dependency management and linting.

* chore: changesets and actions

* chore: actions fetch depth for chagesets

--- a/.github/workflows/check-changeset.yml
+++ b/.github/workflows/check-changeset.yml
@@ -1,21 +1,23 @@
-name: CI
+name: Check for Changeset
 
 on:
-  push:
-    branches: [main]
   pull_request:
+    branches: [main]
 
 jobs:
-  lint:
+  check-changeset:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
+
       - name: Install dependencies
         run: bun install
-      - name: Lint
-        run: bun run lint
-      - name: Prettier
-        run: bun run prettier
+
+      - name: Check for changeset
+        run: |
+          bunx changeset status --since=origin/main
