--- a/biome.json
+++ b/biome.json
@@ -1,3 +1,5 @@
 {
-  "extends": ["@sitaggart/eslint-config/biome", "@sitaggart/prettier-config/biome"]
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.6/schema.json",
+  "root": true,
+  "extends": ["@sitaggart/eslint-config/biome.json", "@sitaggart/prettier-config/biome.json"]
 }
