--- a/packages/eslint-config-ts/biome.json
+++ b/packages/eslint-config-ts/biome.json
@@ -1,12 +1,21 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.4/schema.json",
-  "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-  "files": { "ignoreUnknown": false },
-  "formatter": { "enabled": true, "indentStyle": "tab" },
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.6/schema.json",
+  "extends": ["@sitaggart/eslint-config"],
+  "assist": {
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
+    },
+    "enabled": true
+  },
+  "files": {
+    "ignoreUnknown": false
+  },
   "linter": {
     "enabled": true,
+    "includes": ["**", "!node_modules/*", "!**/.eslintrc.js"],
     "rules": {
-      "recommended": false,
       "a11y": {
         "noAccessKey": "error",
         "noAriaUnsupportedElements": "error",
@@ -38,7 +47,10 @@
         "useValidAriaProps": "error",
         "useValidAriaRole": {
           "level": "error",
-          "options": { "allowInvalidRoles": [], "ignoreNonDom": false }
+          "options": {
+            "allowInvalidRoles": [],
+            "ignoreNonDom": false
+          }
         },
         "useValidAriaValues": "error",
         "useValidAutocomplete": "off",
@@ -46,7 +58,9 @@
       },
       "complexity": {
         "noAdjacentSpacesInRegex": "error",
+        "noArguments": "error",
         "noBannedTypes": "error",
+        "noCommaOperator": "error",
         "noExtraBooleanCast": "error",
         "noForEach": "error",
         "noStaticOnlyClass": "error",
@@ -64,11 +78,11 @@
         "noUselessTypeConstraint": "error",
         "noUselessUndefinedInitialization": "error",
         "noVoid": "error",
-        "noWith": "error",
         "useArrowFunction": "off",
         "useDateNow": "error",
         "useFlatMap": "error",
         "useLiteralKeys": "error",
+        "useNumericLiterals": "error",
         "useRegexLiterals": "error"
       },
       "correctness": {
@@ -99,12 +113,13 @@
         "noUnusedPrivateClassMembers": "off",
         "noUnusedVariables": "error",
         "noVoidElementsWithChildren": "error",
-        "useArrayLiterals": "error",
         "useIsNan": "error",
         "useJsxKeyInIterable": "error",
         "useValidForDirection": "error",
+        "useValidTypeof": "error",
         "useYield": "error"
       },
+      "recommended": false,
       "security": {
         "noBlankTarget": "error",
         "noDangerouslySetInnerHtml": "warn",
@@ -112,8 +127,6 @@
         "noGlobalEval": "error"
       },
       "style": {
-        "noArguments": "error",
-        "noCommaOperator": "error",
         "noCommonJs": "off",
         "noDefaultExport": "off",
         "noDoneCallback": "error",
@@ -127,66 +140,66 @@
           "level": "error",
           "options": {
             "deniedGlobals": {
-              "defaultStatus": "TODO: Add a custom message here.",
-              "status": "TODO: Add a custom message here.",
-              "scroll": "TODO: Add a custom message here.",
-              "outerHeight": "TODO: Add a custom message here.",
-              "screenX": "TODO: Add a custom message here.",
-              "opener": "TODO: Add a custom message here.",
-              "onfocus": "TODO: Add a custom message here.",
-              "pageYOffset": "TODO: Add a custom message here.",
               "addEventListener": "TODO: Add a custom message here.",
-              "defaultstatus": "TODO: Add a custom message here.",
-              "history": "TODO: Add a custom message here.",
-              "frames": "TODO: Add a custom message here.",
-              "screenY": "TODO: Add a custom message here.",
-              "focus": "TODO: Add a custom message here.",
-              "outerWidth": "TODO: Add a custom message here.",
-              "opera": "TODO: Add a custom message here.",
-              "external": "TODO: Add a custom message here.",
-              "innerHeight": "TODO: Add a custom message here.",
+              "blur": "TODO: Add a custom message here.",
+              "close": "TODO: Add a custom message here.",
               "closed": "TODO: Add a custom message here.",
-              "isFinite": "Use Number.isFinite instead https://github.com/airbnb/javascript#standard-library--isfinite",
-              "frameElement": "TODO: Add a custom message here.",
-              "scrollY": "TODO: Add a custom message here.",
-              "self": "TODO: Add a custom message here.",
-              "onblur": "TODO: Add a custom message here.",
+              "confirm": "TODO: Add a custom message here.",
+              "defaultStatus": "TODO: Add a custom message here.",
+              "defaultstatus": "TODO: Add a custom message here.",
+              "event": "TODO: Add a custom message here.",
+              "external": "TODO: Add a custom message here.",
               "find": "TODO: Add a custom message here.",
-              "parent": "TODO: Add a custom message here.",
-              "top": "TODO: Add a custom message here.",
-              "moveBy": "TODO: Add a custom message here.",
-              "menubar": "TODO: Add a custom message here.",
-              "length": "TODO: Add a custom message here.",
-              "onerror": "TODO: Add a custom message here.",
-              "onresize": "TODO: Add a custom message here.",
-              "removeEventListener": "TODO: Add a custom message here.",
-              "onload": "TODO: Add a custom message here.",
-              "scrollTo": "TODO: Add a custom message here.",
-              "moveTo": "TODO: Add a custom message here.",
-              "scrollX": "TODO: Add a custom message here.",
-              "name": "TODO: Add a custom message here.",
-              "toolbar": "TODO: Add a custom message here.",
+              "focus": "TODO: Add a custom message here.",
+              "frameElement": "TODO: Add a custom message here.",
+              "frames": "TODO: Add a custom message here.",
+              "history": "TODO: Add a custom message here.",
+              "innerHeight": "TODO: Add a custom message here.",
               "innerWidth": "TODO: Add a custom message here.",
+              "isFinite": "Use Number.isFinite instead https://github.com/airbnb/javascript#standard-library--isfinite",
+              "isNaN": "Use Number.isNaN instead https://github.com/airbnb/javascript#standard-library--isnan",
+              "length": "TODO: Add a custom message here.",
               "location": "TODO: Add a custom message here.",
               "locationbar": "TODO: Add a custom message here.",
-              "scrollBy": "TODO: Add a custom message here.",
+              "menubar": "TODO: Add a custom message here.",
+              "moveBy": "TODO: Add a custom message here.",
+              "moveTo": "TODO: Add a custom message here.",
+              "name": "TODO: Add a custom message here.",
+              "onblur": "TODO: Add a custom message here.",
+              "onerror": "TODO: Add a custom message here.",
+              "onfocus": "TODO: Add a custom message here.",
+              "onload": "TODO: Add a custom message here.",
+              "onresize": "TODO: Add a custom message here.",
+              "onunload": "TODO: Add a custom message here.",
+              "open": "TODO: Add a custom message here.",
+              "opener": "TODO: Add a custom message here.",
+              "opera": "TODO: Add a custom message here.",
+              "outerHeight": "TODO: Add a custom message here.",
+              "outerWidth": "TODO: Add a custom message here.",
+              "pageXOffset": "TODO: Add a custom message here.",
+              "pageYOffset": "TODO: Add a custom message here.",
+              "parent": "TODO: Add a custom message here.",
+              "print": "TODO: Add a custom message here.",
+              "removeEventListener": "TODO: Add a custom message here.",
+              "resizeBy": "TODO: Add a custom message here.",
               "resizeTo": "TODO: Add a custom message here.",
-              "stop": "TODO: Add a custom message here.",
-              "scrollbars": "TODO: Add a custom message here.",
-              "blur": "TODO: Add a custom message here.",
-              "screenTop": "TODO: Add a custom message here.",
-              "confirm": "TODO: Add a custom message here.",
               "screen": "TODO: Add a custom message here.",
               "screenLeft": "TODO: Add a custom message here.",
-              "event": "TODO: Add a custom message here.",
-              "onunload": "TODO: Add a custom message here.",
-              "pageXOffset": "TODO: Add a custom message here.",
-              "resizeBy": "TODO: Add a custom message here.",
+              "screenTop": "TODO: Add a custom message here.",
+              "screenX": "TODO: Add a custom message here.",
+              "screenY": "TODO: Add a custom message here.",
+              "scroll": "TODO: Add a custom message here.",
+              "scrollBy": "TODO: Add a custom message here.",
+              "scrollTo": "TODO: Add a custom message here.",
+              "scrollX": "TODO: Add a custom message here.",
+              "scrollY": "TODO: Add a custom message here.",
+              "scrollbars": "TODO: Add a custom message here.",
+              "self": "TODO: Add a custom message here.",
+              "status": "TODO: Add a custom message here.",
               "statusbar": "TODO: Add a custom message here.",
-              "isNaN": "Use Number.isNaN instead https://github.com/airbnb/javascript#standard-library--isnan",
-              "close": "TODO: Add a custom message here.",
-              "open": "TODO: Add a custom message here.",
-              "print": "TODO: Add a custom message here."
+              "stop": "TODO: Add a custom message here.",
+              "toolbar": "TODO: Add a custom message here.",
+              "top": "TODO: Add a custom message here."
             }
           }
         },
@@ -194,6 +207,7 @@
         "noSubstr": "error",
         "noUselessElse": "error",
         "noYodaExpression": "error",
+        "useArrayLiterals": "error",
         "useAsConstAssertion": "error",
         "useAtIndex": "error",
         "useBlockStatements": "error",
@@ -208,31 +222,41 @@
         "useExponentiationOperator": "error",
         "useFilenamingConvention": {
           "level": "error",
-          "options": { "filenameCases": ["kebab-case"] }
+          "options": {
+            "filenameCases": ["kebab-case"]
+          }
         },
         "useForOf": "error",
         "useFragmentSyntax": "error",
         "useNamingConvention": {
           "level": "error",
           "options": {
-            "strictCase": false,
-            "requireAscii": false,
             "conventions": [
               {
-                "selector": { "kind": "function" },
-                "formats": ["camelCase", "PascalCase"]
+                "formats": ["camelCase", "PascalCase"],
+                "selector": {
+                  "kind": "function"
+                }
               },
               {
-                "selector": { "kind": "variable" },
-                "formats": ["camelCase", "PascalCase", "CONSTANT_CASE"]
+                "formats": ["camelCase", "PascalCase", "CONSTANT_CASE"],
+                "selector": {
+                  "kind": "variable"
+                }
               },
-              { "selector": { "kind": "typeLike" }, "formats": ["PascalCase"] }
-            ]
+              {
+                "formats": ["PascalCase"],
+                "selector": {
+                  "kind": "typeLike"
+                }
+              }
+            ],
+            "requireAscii": false,
+            "strictCase": false
           }
         },
         "useNodejsImportProtocol": "error",
         "useNumberNamespace": "error",
-        "useNumericLiterals": "error",
         "useShorthandAssign": "error",
         "useSingleVarDeclarator": "error",
         "useTemplate": "error",
@@ -286,51 +310,19 @@
         "noUnsafeDeclarationMerging": "error",
         "noUnsafeNegation": "error",
         "noVar": "warn",
+        "noWith": "error",
         "useAwait": "off",
         "useDefaultSwitchClauseLast": "error",
         "useErrorMessage": "error",
         "useGetterReturn": "error",
         "useGuardForIn": "error",
         "useIsArray": "error",
-        "useNumberToFixedDigitsArgument": "error",
-        "useValidTypeof": "error"
+        "useNumberToFixedDigitsArgument": "error"
       }
-    },
-    "includes": ["**", "**", "**", "**", "!node_modules/*", "!**/.eslintrc.js"]
-  },
-  "javascript": {
-    "formatter": { "quoteStyle": "double" },
-    "globals": ["navigator", "window", "document"]
+    }
   },
   "overrides": [
     {
-      "includes": ["*.ts", "*.tsx"],
-      "linter": {
-        "rules": {
-          "correctness": {
-            "noConstAssign": "off",
-            "noGlobalObjectCalls": "off",
-            "noInvalidConstructorSuper": "off",
-            "noSetterReturn": "off",
-            "noUndeclaredVariables": "off",
-            "noUnreachable": "off",
-            "noUnreachableSuper": "off"
-          },
-          "suspicious": {
-            "noDuplicateClassMembers": "off",
-            "noDuplicateObjectKeys": "off",
-            "noDuplicateParameters": "off",
-            "noFunctionAssign": "off",
-            "noImportAssign": "off",
-            "noRedeclare": "off",
-            "noUnsafeNegation": "off",
-            "useGetterReturn": "off",
-            "useValidTypeof": "off"
-          }
-        }
-      }
-    },
-    {
       "includes": ["*.ts", "*.tsx", "*.mts", "*.cts"],
       "linter": {
         "rules": {
@@ -341,64 +333,9 @@
             "noSetterReturn": "off",
             "noUndeclaredVariables": "off",
             "noUnreachable": "off",
-            "noUnreachableSuper": "off"
-          },
-          "style": { "noArguments": "error", "useConst": "error" },
-          "suspicious": {
-            "noDuplicateClassMembers": "off",
-            "noDuplicateObjectKeys": "off",
-            "noDuplicateParameters": "off",
-            "noFunctionAssign": "off",
-            "noImportAssign": "off",
-            "noRedeclare": "off",
-            "noUnsafeNegation": "off",
-            "noVar": "error",
-            "useGetterReturn": "off"
-          }
-        }
-      }
-    },
-    {
-      "includes": ["*.ts", "*.tsx"],
-      "linter": {
-        "rules": {
-          "correctness": {
-            "noConstAssign": "off",
-            "noGlobalObjectCalls": "off",
-            "noInvalidConstructorSuper": "off",
-            "noSetterReturn": "off",
-            "noUndeclaredVariables": "off",
-            "noUnreachable": "off",
-            "noUnreachableSuper": "off"
-          },
-          "suspicious": {
-            "noDuplicateClassMembers": "off",
-            "noDuplicateObjectKeys": "off",
-            "noDuplicateParameters": "off",
-            "noFunctionAssign": "off",
-            "noImportAssign": "off",
-            "noRedeclare": "off",
-            "noUnsafeNegation": "off",
-            "useGetterReturn": "off",
+            "noUnreachableSuper": "off",
             "useValidTypeof": "off"
-          }
-        }
-      }
-    },
-    {
-      "includes": ["*.ts", "*.tsx", "*.mts", "*.cts"],
-      "linter": {
-        "rules": {
-          "correctness": {
-            "noConstAssign": "off",
-            "noGlobalObjectCalls": "off",
-            "noInvalidConstructorSuper": "off",
-            "noSetterReturn": "off",
-            "noUndeclaredVariables": "off",
-            "noUnreachable": "off",
-            "noUnreachableSuper": "off"
           },
-          "style": { "noArguments": "error", "useConst": "error" },
           "suspicious": {
             "noDuplicateClassMembers": "off",
             "noDuplicateObjectKeys": "off",
@@ -414,8 +351,9 @@
       }
     }
   ],
-  "assist": {
-    "enabled": true,
-    "actions": { "source": { "organizeImports": "on" } }
+  "vcs": {
+    "clientKind": "git",
+    "enabled": false,
+    "useIgnoreFile": false
   }
 }
