--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -25,11 +25,13 @@
   },
   "peerDependencies": {
     "@biomejs/biome": "2.0.0-beta.6",
+    "@sitaggart/eslint-config": "workspace:*",
     "typescript": "5.8.3"
   },
   "gitHead": "5ab9ad16ed50b7f5fa90a71c9efb4cbd95569a43",
   "devDependencies": {
     "@biomejs/biome": "2.0.0-beta.6",
+    "@sitaggart/eslint-config": "workspace:*",
     "typescript": "5.8.3"
   }
 }
