--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.0.0-beta.6/schema.json",
   "root": true,
-  "extends": ["@sitaggart/eslint-config/biome.json", "@sitaggart/prettier-config/biome.json"]
+  "extends": ["@sitaggart/lint-config/biome.json"]
 }
