--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -15,5 +15,5 @@ jobs:
           bun-version: latest
       - name: Install dependencies
         run: bun install
-      - name: Check
-        run: bun check
+      - name: Ci Check
+        run: bun ci
